@@ -1,0 +1,1 @@
+from .partialfunction import func2, func3
